adding dids
